src/Model/parser/Grammar.txt
<RuleFile>        ::=  <Rules>
<Rules>             ::=  <Rule><A>
<A>                    ::=  <Rules>|Epsilon
<Rule>              ::=  If[<Expression>] Then <Actions>
<Actions>         ::=  <Action><B>
<B>                    ::=  <Actions>|Epsilon
<Action>           ::=  Name(<Parameters>)
<Parameters>  ::=  Number<C>
<C>                    ::=  ,<Parameters>|Epsilon
<Expression>   ::=  <Term><Ep>
<Ep>                  ::=  OR<Term><Ep>|Epsilon
<Term>             ::=  <Factor><Tp>
<Tp>                  ::=  AND<Factor><Tp>|Epsilon
<Factor>           ::=  NOT<Fp>|<Fp>
<Fp>                  ::=  (<Expression>)|<SimpleExp>
<SimpleExp>    ::=  Name Comparator Number
